--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
 # OpenAI API Key (required)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Supabase Configuration (optional - app works without it)
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# PostgreSQL Database
+# Format: postgresql://username:password@host:port/database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/medinsight
 
 # Frontend URL for CORS
 FRONTEND_URL=http://localhost:3000
