--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
-# Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
-
-# Supabase Configuration (optional)
+# Supabase Configuration (for Authentication only)
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Backend API URL
+NEXT_PUBLIC_API_URL=http://localhost:8000
